# Auditor-agent

./: .gitignore  README.md  requirements.txt
SFT/_archive_experimental_variants/: README.md
SFT/auditor_agent_gnn_baselines_package/: MEETING_BRIEF.md  README.md  RESULTS.md
SFT/auditor_agent_sft_v10_package/: README.md  SFT_DATA_AUDIT.md
SFT/auditor_agent_sft_v11_package/: README.md  SFT_DATA_AUDIT.md
SFT/auditor_agent_sft_v12_gnn_distill_package/: README.md
aci_min_repro/: README.md  check_outputs.py  model_config.example.yaml  model_config.yaml  run_all_mas_code_disclosure_10.sh  run_metagpt_code_disclosure_150.ps1  run_metagpt_code_disclosure_150.py  run_metagpt_code_disclosure_150.sh  run_single_attack.py  to_audit_prefix.py
auditor_agent_0629/: README.md
auditor_agent_marbel/: README.md  pyproject.toml
auditor_agent_marbel/configs/: benchmark_384_multiscenario.yaml  model_config.example.yaml  pilot_run.yaml
auditor_agent_marbel/data/attack_specs/: benchmark384_multiscenario_attack_specs.jsonl
auditor_agent_marbel/scripts/: analyze_and_export_sft.py  judge_attack_success.py  server_commands.md
auditor_agent_marbel/src/auditor_agent_marbel/: __init__.py
auditor_agent_marbel/src/auditor_agent_marbel/attacks/: config_injection.py
auditor_agent_marbel/src/auditor_agent_marbel/core/: __init__.py
auditor_agent_marbel/src/auditor_agent_marbel/data/: __init__.py  sample_loader.py
auditor_agent_marbel/src/auditor_agent_marbel/runner/: __init__.py  run_attack.py
mas_safety_doc/: aci_adapter_prototype.md
papers/: README.md
(+1310 files in other folders)
